2004-11-12  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* configure.ac (AC_INIT): Bump version.
	* src/main.cc (main): Write lock bits when all other programming
	tasks are completed.

2004-10-25  Theodore A. Roth  <troth@openavr.org>
[Contributed by Colin O'Flynn <coflynn@newae.com>]

	* configure.ac (AC_INIT): Bump version.
	* doc/mk2-protocol.txt: New file.

2004-08-08  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* src/main.cc: Move device erase in front of write fuses in case
	of device being locked.

2004-08-05  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* src/jtagio.cc: (deviceDefinitions): Fix flash and eeprom page
	sizes for mega64 and mega128. (Thanks to Ted Roth for this).
	* src/jtagprog.cc: (jtag_flash_image): Don't override device specific
	eeprom page size.

2004-08-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Bootstrap: export AUTO* variables to make automake happy.

2004-05-26  Theodore A. Roth  <troth@openavr.org>
[Contributed by Onno van Eijk <onno@gorgoz.org>]

	* configure.ac (AC_INIT): Bump version.

	* src/ioreg.cc (atmega32_io_registers): Define.
	* src/ioreg.h (atmega32_io_registers): Declare.
	* src/jtagio.cc (deviceDefinitions): Install mega32 io register defs.

2004-03-12  David Gay  <dgay@barnowl.research.intel-research.net>

	* configure.ac: Bump version.

	* src/jtagio.cc (safewrite): write may write only part of the
	data (problem tended to show up with USB serial ports). Fix.

2004-03-08  David Gay  <dgay@barnowl.research.intel-research.net>

	* scripts/start-avarice: add --erase option when programming

2004-02-25  Theodore A. Roth  <troth@openavr.org>

	* src/jtagprog.cc (eraseProgramMemory): Add comment noting that this is
	really a chip erase operation.
	(downloadToTarget): Don't erase the device here if programming.
	* src/main.cc (main): Never erase the device unless the user explicitly
	gives the --erase option.
	When programming without the --erase option, issue a warning about the
	change in behavior.