@@ -1,3 +1,10 @@
+2004-11-18  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.ac (AC_INIT): Bump version.
+	* src/jtagprog.cc (jtag_create_image):
+	Replace bfd_get_section_size_before_reloc with bfd_get_section_size.
+	Work around for change API in bfd.
+
 2004-11-12  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>
 
 	* configure.ac (AC_INIT): Bump version.
